Reetan.Nayak Dev 25/force-app/main/default/objects/Integration_General_Settings__c/Integration_General_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Integration settings like credential, variables and identifiers for each external application grouped by Name</description>
    <label>Integration General Settings</label>
</CustomObject>