Reetan.Nayak Dev 25/force-app/main/default/objects/Integration_General_Settings__c/fields/Application_Sender_Name__c.field-meta.xml
<CustomField>
    <fullName>Application_Sender_Name__c</fullName>
    <description>SFDC application identifier recognized by each external service</description>
    <label>Application Sender Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>