Reetan.Nayak Dev 25/force-app/main/default/objects/Integration_General_Settings__c/fields/Default_Error_Code__c.field-meta.xml
<CustomField>
    <fullName>Default_Error_Code__c</fullName>
    <label>Default Error Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>