Reetan.Nayak Dev 25/force-app/main/default/objects/Integration_General_Settings__c/fields/Enable_Integration__c.field-meta.xml
<CustomField>
    <fullName>Enable_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>kill switch for the integration</description>
    <label>Enable Integration</label>
    <type>Checkbox</type>
</CustomField>