Reetan.Nayak Dev 25/force-app/main/default/objects/Integration_General_Settings__c/fields/No_Response_Error_Code__c.field-meta.xml
<CustomField>
    <fullName>No_Response_Error_Code__c</fullName>
    <label>No Response Error Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>