Reetan.Nayak Dev 25/force-app/main/default/objects/Integration_General_Settings__c/fields/Success_Code__c.field-meta.xml
<CustomField>
    <fullName>Success_Code__c</fullName>
    <label>Success Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>